--- a/.release-it.json
+++ b/.release-it.json
@@ -1,9 +1,12 @@
 {
 	"github": {
-		"release": false
+		"release": true
 	},
 	"git": {
-		"commitMessage": "release: 🍫 v${version}"
+		"commitMessage": "release: 🍫 v${version}",
+    "commit": true,
+    "tag": true,
+    "push": true
 	},
 	"npm": {
 		"publish": false
