--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
     "test:push": "yarn build && yalc push"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
-    "ant-design-vue": "^4.0.3",
+    "element-ui": "^2.15.14",
     "eslint": "^8.50.0",
-    "less": "^4.2.0",
     "vite-plugin-compression": "^0.5.1",
-    "vue": "^3.3.4"
+    "vite-plugin-vue2": "^2.0.3",
+    "vue": "2.7.15",
+    "vue-template-compiler": "^2.7.15"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
@@ -59,7 +59,6 @@
     "@release-it/conventional-changelog": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-vue": "^4.2.3",
     "commitizen": "^4.3.0",
     "cz-git": "^1.7.1",
     "eslint-config-prettier": "^9.0.0",
@@ -71,11 +70,12 @@
     "postcss-preset-env": "^9.1.4",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "terser": "^5.21.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.6.0",
-    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitepress": "^1.0.0-rc.12",
     "vue-tsc": "^1.8.5"
   },
@@ -88,7 +88,6 @@
     }
   },
   "keywords": [
-    "ant-design-vue",
     "vite",
     "vite3",
     "vitepress",
